# CaptionFlow

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py  test-config.yml
.github/workflows/: tests.yml
examples/: orchestrator.yaml
src/caption_flow/: cli.py  orchestrator.py
src/caption_flow/processors/: webdataset.py
src/caption_flow/storage/: manager.py
src/caption_flow/utils/: auth.py
tests/: conftest.py  test_cli.py  test_processors.py  test_webdataset_ranges.py  test_worker_caption.py
