[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caption-flow"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Self-contained distributed community captioning system"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11,<3.14"
authors = [{ name = "bghira", email = "bghira@users.github.com" }]
keywords = ["captioning", "distributed", "vllm", "dataset", "community"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
caption-flow = "caption_flow.cli:main"

[project.urls]
Homepage = "https://github.com/bghira/CaptionFlow"
Repository = "https://github.com/bghira/CaptionFlow"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90", "D"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.setuptools.dynamic]
version = { attr = "caption_flow.__version__" }
